--- a/documentation.html
+++ b/documentation.html
@@ -16,14 +16,17 @@
         <a href="#" class="lexi-token">LexiTokens</a>
         <a class="learn-lex" href="#">Learn lex</a>
         <h3 class="log-in">Log in</h3>
-        <img class="login-icon" src="images/login icon.png" alt="" srcset="">
+        <img class="login-icon" src="login icon.png" alt="" srcset="">
     </nav>
-        <!-- Nav-Bar Contents END -->
+    <!-- Nav-Bar Contents END -->
 
-        <main>
-            <h1 class="main-doc-head">Lexical Analyzer Documentation: Building a Tokenizer with Lex</h1>
-            <img class="doc-back" src="images/doc-back.png" alt="" srcset="">
-        </main>
+    <main>
+        <h1 class="main-doc-head">Lexical Analyzer Documentation: Building a Tokenizer with Lex</h1>
+        <h2 class="intro-head">Introduction</h2>
+       
+
+    </main>
+    <img class="doc-back" src="doc-back.png" alt="" srcset="">
 </body>
 
 </html>
